--- a/2021-22-2/klienswp/01/landing_page.html
+++ b/2021-22-2/klienswp/01/landing_page.html
@@ -245,13 +245,17 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="small text-center text-muted">Copyright &copy; <span>2019</span> - Start Bootstrap</div>
     </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <script src="js/feladat2.js"></script>
   <script src="js/feladat3.js"></script>
+  <script src="js/feladat4.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery.animate-number@0.0.14/jquery.animateNumber.min.js"></script>
+  <script src="js/feladat6.js"></script>
 </body>
 
 </html>
