--- a/2022-23-2/klienswebprog/01/landing_page.html
+++ b/2022-23-2/klienswebprog/01/landing_page.html
@@ -231,7 +231,7 @@
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+1 (202) 555-0149</div>
+          <div>+1 (202) <span>555</span>-0149</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
@@ -253,5 +253,9 @@
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <script src="js/feladat2.js"></script>
   <script src="js/feladat3.js"></script>
+  <script src="js/feladat4.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery.animate-number@0.0.14/jquery.animateNumber.min.js"></script>
+  <script src="js/feladat6.js"></script>
 </body>
 </html>
